syntax = "proto3";

option go_package = "api/internal/app/grpc/translator";

package translator;

enum LangType {
  UNKOWN = 0;
  JP = 1;
  EN = 2;
}

// The request message containing the user's name.
message TranslateRequest {
  string text = 1;
  LangType srcLang = 2;
  LangType targetLang = 3;
}

// The response message containing the greetings
message TranslateResponse {
  string text = 1;
  LangType srcLang = 2;

  map<string, TranslatedText> translatedTextList = 3;
}

// https://developers.google.com/protocol-buffers/docs/proto3#maps
message TranslatedText {
  string text = 1;
  LangType lang = 2;
}

// The greeting service definition.
service Translator {
  // Sends a greeting
  rpc Translate (TranslateRequest) returns (TranslateResponse) {}
}
